--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Is this AI?</title>
+    <title>Is this AI? Settings</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
+        body { width: 300px; padding: 10px; font-family: Arial, sans-serif; }
+        label { display: block; margin-top: 10px; }
+        input { width: 100%; margin-top: 5px; }
+        button { margin-top: 15px; }
     </style>
 </head>
 <body>
-    <h1>Is this AI?</h1>
-    <p>This extension checks if a webpage contains AI-generated content.</p>
+    <h2>AI Detection Settings</h2>
+    <label for="highSensitivity">High Sensitivity Threshold:</label>
+    <input type="number" id="highSensitivity" min="1" max="100">
+    <label for="lowSensitivity">Low Sensitivity Threshold:</label>
+    <input type="number" id="lowSensitivity" min="1" max="100">
+    <button id="save">Save Settings</button>
+    <script src="popup.js"></script>
 </body>
 </html>
